<?xml version="1.0"?>
<package>
  <name>gesture_msgs</name>
  <version>0.0.0</version>
  <description>The gesture_msgs package</description>
  <maintainer email="viki@todo.todo">viki</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>genmsg</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>genmsg</run_depend>

</package>
