<package>
  <name>Gesture_Library</name>
  <version>1.0.0</version>
  <description>The Gesture_Library package</description>
  <author>Phillip Steinhart</author>
  <maintainer email="Steinhap@union.edu">Phillip Steinhart</maintainer>
  <license>BFG</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  <run_depend>rospy</run_depend>
  <run_depend>arbotix_controllers</run_depend>
  <run_depend>arbotix_python</run_depend>


  <export>
   

  </export>
</package>
